--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "concurrently": "^8.2.0",
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "sass": "^1.89.1",
